--- a/css/game.css
+++ b/css/game.css
@@ -1,6 +1,15 @@
-.game_canvas {
-    width: 800px;
-    height: 600px;
-    background-color: blue;
-    margin: 0 auto;
+body {
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background: url("../img/background.jpg");
+    background-size: cover;
+}
+
+#game {
+    /* width: 1200px;
+    height: 640px; */
+    background-color: rgb(41, 41, 41);
+    /* margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap; */
 }
